Add Java 17 Support (#274)
* Update MVN and its wrapper to latest

* Migrated build to Java 17

* Fix build errors

* fix Maven warnings on duplicate plugins

* After much debugging by John we have workeded around Weld

* quarkus 2.7.0

Co-authored-by: John Oliver <1615532+johnoliver@users.noreply.github.com>